Added Heroku link

--- a/app/views/places/index.html.erb
+++ b/app/views/places/index.html.erb
@@ -1,3 +1,7 @@
 <h1>Welcome to my Awesome Web App</h1>
 
 <h2> <a href="https://github.com/joehenriod/quizzter"> GitHub Repo </a> <h2>
+
+<h2> <a href="https://quizzter.herokuapp.com/"> Check out my Heroku Name! </a> <h2>
+
+	
