Added Simple Form and Bootstrap

--- a/app/views/koans/index.html.erb
+++ b/app/views/koans/index.html.erb
@@ -5,4 +5,6 @@
 <h2> <a href="https://quizzter.herokuapp.com/"> Check out my Heroku Name! </a> <h2>
 
 
-<h1><%= @koan.inspect %></h1>
+<h1><%= @koan.saying %></h1>
+<h2>- <%= @koan.author %></h2>
+
