--- a/app/assets/stylesheets/master.css.scss
+++ b/app/assets/stylesheets/master.css.scss
@@ -1,13 +1,14 @@
 h1 {
-	color: orange
+	color: orange;
 }
 
 h2 a {
-	color: green
+	color: green;
 }
 
 
 header {
-	background-color: #e6e6e6
+	background-color: #e6e6e6;
+	padding: 1cm 1cm 1cm 1cm;
 
 }
